Refactor API Calls for create, update, delete